--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,27 +7,27 @@ spring.jpa.hibernate.ddl-auto=update
 
 #mysql://bbd02498f09a63:25502334@us-cdbr-iron-east-05.cleardb.net/heroku_352afed71323295
 
-#####
-###   Database Settings
-#####
+######
+####   Database Settings
+######
 #spring.datasource.url=jdbc:h2:mem:mines;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 #spring.datasource.platform=h2
 #spring.datasource.username=sa
 #spring.datasource.password=
 #spring.datasource.driverClassName=org.h2.Driver
 #spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-#
-#####
-###   H2 Settings
-#####
+##
+######
+####   H2 Settings
+######
 #spring.h2.console.enabled=true
 #spring.h2.console.path=/console
 #spring.h2.console.settings.trace=false
 #spring.h2.console.settings.web-allow-others=false
-#
-#####
-###   Hibernate Settings
-#####
+##
+######
+####   Hibernate Settings
+######
 #spring.jpa.hibernate.ddl-auto=create-drop
 #spring.jpa.properties.hibernate.show_sql=true
 #spring.jpa.properties.hibernate.use_sql_comments=false
